# activemq

./: .asf.yaml  .gitignore  .ratignore  AGENTS.md  ActiveMQ启动端口占用问题(ActiveMQ startup port occupancy problem)  CONTRIBUTING.md  Jenkinsfile  Jenkinsfile.bak  KEYS  LICENSE  MERIT.txt  NOTICE  NOTICE.txt  README.md  README.rst  README.txt  SECURITY.md  STATUS  THREAT_MODEL.md  amqp-trace.txt  build.properties  doap.rdf  maven.xml  poc-test.txt  pom.xml  project.properties  project.xml
.github/: dependabot.yml
activecluster/: .classpath  .cvsignore  .project  maven.xml  pom.xml  project.properties  project.xml
activeio/: maven.xml  pom.xml  project.properties  project.xml
activemq-all/: pom.xml
activemq-amq-store/: pom.xml
activemq-amqp/: pom.xml
activemq-arquillian/: pom.xml
activemq-blueprint/: pom.xml
activemq-book/: pom.xml
activemq-broker/: README.md  README_OAUTH_OIDC.md  README_OAUTH_OIDC.md.bak  pom.xml
activemq-camel/: pom.xml
activemq-camel-loadtest/: pom.xml
activemq-cf/: README.md  org.apache.activemq.cfg  pom.xml
amazon/: Makefile.am  Makefile.in  configure  configure.in
amazon/amq_brokersession/: BrokerSession.cpp  BrokerSession.h  BrokerSessionImpl.cpp  BrokerSessionImpl_.h  Makefile.am  Makefile.in
amazon/amq_corelib/: BlockingMessageConsumer.cpp  BlockingMessageConsumer.h  BlockingMessageConsumerRef.cpp  BlockingMessageConsumerRef.h  Buffer.h  BytesMessage.h  CoreLib.cpp  CoreLib.h  CoreLibImpl.cpp  CoreLibImpl_.h  Destination.cpp  Destination.h  Exception.h  ExceptionCallback.cpp  ExceptionCallback.h  Lock.cpp  Lock.h  LogLevel.cpp  LogLevel.h  Logger.h  Makefile.am  Makefile.in  Message.h  MessageConsumer.cpp  MessageConsumer.h  MessageConsumerRef.cpp  MessageConsumerRef.h  NonBlockingMessageConsumer.cpp  NonBlockingMessageConsumer.h  NonBlockingMessageConsumerRef.cpp  NonBlockingMessageConsumerRef.h  NullLogger.h  PrimitiveMap.cpp  PrimitiveMap.h  RCSID.h  Sem.cpp  Sem.h  StompMessage.cpp  StompMessage.h  TextMessage.cpp  (+3 more)
amazon/amq_examples/: Makefile.am  Makefile.in
amazon/amq_examples/bs_async_recv/: Makefile.am  Makefile.in  brokersession_example_receiver_async.cpp
amazon/amq_examples/bs_send/: Makefile.am  Makefile.in  brokersession_example_sender.cpp
amazon/amq_examples/bs_sync_recv/: Makefile.am  Makefile.in  brokersession_example_receiver_sync.cpp
amazon/amq_examples/cl_send/: Makefile.am  Makefile.in  corelib_example_sender.cpp
amazon/amq_transport/: Makefile.am  Makefile.in  TCPTransport.cpp  TCPTransport.h  Transport.cpp  Transport.h  TransportFactory.cpp  TransportFactory.h  TransportInitializer.cpp  TransportInitializer.h
amazon/command/: AbstractCommand.h  ActiveMQBytesMessage.cpp  ActiveMQBytesMessage.h  ActiveMQDestination.cpp  ActiveMQDestination.h  ActiveMQMapMessage.cpp  ActiveMQMapMessage.h  ActiveMQMessage.cpp  ActiveMQMessage.h  ActiveMQObjectMessage.cpp  ActiveMQObjectMessage.h  ActiveMQQueue.cpp  ActiveMQQueue.h  ActiveMQStreamMessage.cpp  ActiveMQStreamMessage.h  ActiveMQTempDestination.cpp  ActiveMQTempDestination.h  ActiveMQTempQueue.cpp  ActiveMQTempQueue.h  ActiveMQTempTopic.cpp  ActiveMQTempTopic.h  ActiveMQTextMessage.cpp  ActiveMQTextMessage.h  ActiveMQTopic.cpp  ActiveMQTopic.h  BaseCommand.cpp  BaseCommand.h  BrokerError.cpp  BrokerError.h  BrokerId.cpp  BrokerId.h  BrokerInfo.cpp  BrokerInfo.h  CommandTypes.h  ConnectionControl.cpp  ConnectionControl.h  ConnectionError.cpp  ConnectionError.h  ConnectionId.cpp  ConnectionId.h  (+84 more)
amazon/marshal/: ActiveMQBytesMessageMarshaller.cpp  ActiveMQBytesMessageMarshaller.h  ActiveMQDestinationMarshaller.cpp  ActiveMQDestinationMarshaller.h  ActiveMQMapMessageMarshaller.cpp  ActiveMQMapMessageMarshaller.h  ActiveMQMessageMarshaller.cpp  ActiveMQMessageMarshaller.h  ActiveMQObjectMessageMarshaller.cpp  ActiveMQObjectMessageMarshaller.h  ActiveMQQueueMarshaller.cpp  ActiveMQQueueMarshaller.h  ActiveMQStreamMessageMarshaller.cpp  ActiveMQStreamMessageMarshaller.h  ActiveMQTempDestinationMarshaller.cpp  ActiveMQTempDestinationMarshaller.h  ActiveMQTempQueueMarshaller.cpp  ActiveMQTempQueueMarshaller.h  ActiveMQTempTopicMarshaller.cpp  ActiveMQTempTopicMarshaller.h  ActiveMQTextMessageMarshaller.cpp  ActiveMQTextMessageMarshaller.h  ActiveMQTopicMarshaller.cpp  ActiveMQTopicMarshaller.h  BaseCommandMarshaller.cpp  BaseCommandMarshaller.h  BaseDataStreamMarshaller.cpp  BaseDataStreamMarshaller.h  BinaryReader.cpp  BinaryReader.h  BinaryWriter.cpp  BinaryWriter.h  BooleanStream.cpp  BooleanStream.h  BrokerIdMarshaller.cpp  BrokerIdMarshaller.h  BrokerInfoMarshaller.cpp  BrokerInfoMarshaller.h  BufferReader.cpp  BufferReader.h  (+96 more)
(+16825 files in other folders)
